[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/Caisse.png" type="Texture" id=1]
[ext_resource path="res://Box.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.98224, 3.84371 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.20938, 3.76823 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.06619, 3.76738 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.27719, 3.7115 )

[node name="Box" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0017042, 0.0860057 )
shape = SubResource( 1 )

[node name="LeftSide" type="Area2D" parent="."]
linear_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSide"]
position = Vector2( -2.51728, 0.0648847 )
shape = SubResource( 2 )

[node name="RightSide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSide"]
position = Vector2( 2.70218, 0.0639766 )
shape = SubResource( 3 )

[node name="IsGoingToPush" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IsGoingToPush"]
position = Vector2( -0.017086, 0.0512572 )
shape = SubResource( 4 )
[connection signal="body_entered" from="LeftSide" to="." method="_on_LeftSide_body_entered"]
[connection signal="body_entered" from="RightSide" to="." method="_on_RightSide_body_entered"]
[connection signal="body_entered" from="IsGoingToPush" to="." method="_on_IsGoingToPush_body_entered"]
[connection signal="body_exited" from="IsGoingToPush" to="." method="_on_IsGoingToPush_body_exited"]
